# MAVSDK_Test

./: CMakeLists.txt  README.md
Recup_rotor/: recup_rotor.cpp
